# Copland-OS-Enterprise

./: README.md
boot/: bicolor
boot/grub/: QEMU  grub  grub-mkrescue  grub.cfg  x86  x86_64
boot/grub/kernel/: NextKernel_Main.c  kernel.asm  multiboot_entry,  stdlib
boot/grub/nasm/: helloworld.asm  sys_write
boot/next/: START.ELF.
iso/: AX  CMakeLists.txt  install  int  iso.sh  myfirst.asm  x86
